chore: fix script permissions & link command

--- a/.envrc
+++ b/.envrc
@@ -11,7 +11,7 @@ lnk="$PWD/.env/bin/pj"
 if [ ! -f "$lnk" ]; then
     if [ -f "$src" ]; then
         echo "$lnk <- $src not found, adding symlink"
-        ln -s $src $lnk
+        ln -s "$src" "$lnk"
     fi
 fi
 
