--- a/report/package.json
+++ b/report/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf ../dist",
     "dev": "vite --host 0.0.0.0 --port 6419",
-    "prebuild": "npm run clean && mkdir dist",
+    "prebuild": "npm run clean && mkdir ../dist",
     "build:web": "vite build",
     "prebuild:pdf": "pm2 --name render start vite -- preview --port 6418",
-    "build:pdf": "node ./scripts/generate-pdf.js http://localhost:6418 dist/report.pdf",
-    "build": "npm run build:web && npm run build:pdf",
+    "build:pdf": "node ./scripts/generate-pdf.js http://localhost:6418 ../dist/report.pdf",
+    "build:srcFiles": "cp ../build/* ../dist/",
+    "build": "npm run build:web && npm run build:pdf && npm run build:srcFiles",
     "postbuild": "pm2 delete render",
     "preview": "vite preview --port 6418",
     "start": "npm run build && npm run preview"
